# cairn

./: .gitignore  Cargo.toml  LICENSE  PROMPT.md  README.md  TECHNICAL-SPEC.md
.github/: cliff.toml
.github/scripts/: bump-packages.sh  detect-changes.sh
.github/workflows/: conformance.yml  demo-images.yml  docs.yml  pr.yml  release.yml  tag-release.yml
.plans/: session-resume.md
conformance/: Dockerfile.go  Dockerfile.php  Dockerfile.py  Dockerfile.rust  Dockerfile.ts  README.md  docker-compose.yml  network-shaper.sh  run-tests.sh
conformance/fixtures/: README.md
conformance/fixtures/cbor/: 0100.cbor  0300.cbor  0400.cbor  README.md
conformance/fixtures/keys/: README.md  test-keypairs.json
conformance/fixtures/pairing/: README.md  link-vectors.json  pin-vectors.json  psk-vectors.json
conformance/fixtures/ratchet/: README.md  initial-state.json
conformance/runners/: go-runner.sh  php-runner.php  py_conformance.py  rust-runner.sh  ts-runner.js
conformance/runners/go-runner/: go.mod  go.sum  main.go
conformance/runners/rust-runner/: Cargo.toml
conformance/runners/rust-runner/src/: executor.rs  main.rs  scenario.rs
conformance/tests/: scenario-schema.yml
conformance/tests/crypto/: aead.yml  hkdf.yml  ratchet.yml  rendezvous-rotation.yml  spake2.yml
conformance/tests/data/: channel-mux.yml  data-transfer.yml
conformance/tests/forward/: basic.yml  complete-cycle.yml  retention.yml  sequence.yml  trust.yml
conformance/tests/mesh/: partition.yml  route-select.yml  three-hop.yml  two-hop.yml
conformance/tests/pairing/: edge-cases.yml  link.yml  pin.yml  psk.yml  qr.yml  sas-emoji.yml  sas-numeric.yml
conformance/tests/session/: establish.yml  heartbeat.yml  queue.yml  reestablish.yml  resume.yml
conformance/tests/transport/: dynamic-fallback.yml  exhausted.yml  fallback-chain.yml  migration.yml  php-chain.yml
conformance/tests/wire/: cbor-roundtrip.yml  cross-decode.yml  deterministic.yml
conformance/vectors/cbor/: deterministic_encoding.json  envelope_encoding.json  message_types.json
conformance/vectors/crypto/: aead_vectors.json  double_ratchet_vectors.json  ed25519_vectors.json  hkdf_vectors.json  noise_xx_vectors.json  spake2_vectors.json  x25519_vectors.json
conformance/vectors/pairing/: crockford_base32.json  pin_code_vectors.json  sas_vectors.json
conformance/vectors/protocol/: rendezvous_id_vectors.json  version_negotiation.json
demo/folder-sync/: Dockerfile.go  Dockerfile.php  Dockerfile.python  Dockerfile.rust  Dockerfile.typescript  README.md  docker-compose.yml
demo/folder-sync/go/: go.mod  go.sum  main.go  sync.go
demo/folder-sync/php/: cairn_sync.php  composer.json
demo/folder-sync/python/: cairn_sync.py  pyproject.toml
demo/folder-sync/rust/: Cargo.toml
demo/folder-sync/rust/src/: main.rs  sync.rs
demo/folder-sync/typescript/: package.json
demo/folder-sync/typescript/src/: index.ts  sync.ts
demo/messaging/: Dockerfile.go  Dockerfile.php  Dockerfile.python  Dockerfile.rust  Dockerfile.typescript  README.md  docker-compose.yml
demo/messaging/go/: go.mod  go.sum  main.go
demo/messaging/php/: cairn_chat.php  composer.json
demo/messaging/python/: cairn_chat.py  pyproject.toml
demo/messaging/rust/: Cargo.toml
demo/messaging/rust/src/: main.rs
demo/messaging/typescript/: package.json
demo/messaging/typescript/src/: index.ts
demo/server-node/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
demo/server-node/src/: config.rs  main.rs  management.rs
docs/: PRD.md  design-doc.md  getting-started.md  parity-audit.md  technical-specification.md
services/bootstrap/: Cargo.toml  Dockerfile  README.md
services/bootstrap/src/: main.rs
services/relay/: Cargo.toml  Dockerfile  README.md
services/relay/src/: credentials.rs  main.rs  relay.rs  stun.rs
services/signaling/: Cargo.toml  Dockerfile  README.md
services/signaling/src/: auth.rs  main.rs  server.rs
spec/: 01-docusaurus-setup.md  02-landing-page.md  03-getting-started-content.md  04-guides-content.md  05-infrastructure-content.md  06-api-reference-content.md  07-demo-dockerization.md  08-demo-folder-sync-expansion.md  09-cicd-workflows.md  VALIDATION.md
tasks/: COVERAGE.md
tasks/done/: 001-docusaurus-scaffolding.md  002-sidebar-css-assets.md  003-language-tabs-component.md  004-landing-page.md  005-installation-doc.md  006-quick-start-doc.md  007-first-app-doc.md  008-docs-ci-workflow.md  016-guide-pairing.md  017-guide-sessions.md  018-guide-channels.md  019-guide-server-mode.md  020-guide-mesh-routing.md  021-infra-overview.md  022-infra-signaling.md  023-infra-relay.md  024-infra-server-node.md  025-infra-cloudflare.md  026-api-node.md  027-api-session.md  028-api-events.md  029-api-config-errors.md  030-internals-wire-protocol-crypto.md  031-demos-messaging-folder-sync.md  032-demo-server-node.md  033-readme-update.md  036-folder-sync-go.md  037-folder-sync-python.md  038-folder-sync-php.md  039-dockerfiles-messaging.md  040-dockerfiles-folder-sync.md  041-compose-messaging.md  042-compose-folder-sync.md  043-compose-server-node.md  045-cicd-demo-image-publishing.md
tools/gen-vectors/: Cargo.toml
tools/gen-vectors-extra/: Cargo.toml
tools/gen-vectors-extra/src/: main.rs
tools/gen-vectors/src/: main.rs
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: index.md
website/docs/api/: config.md  errors.md  events.md  node.md  session.md
website/docs/demos/: folder-sync.md  messaging.md  server-node.md
website/docs/getting-started/: first-app.md  installation.md  quick-start.md
website/docs/guides/: channels.md  mesh-routing.md  pairing.md  server-mode.md  sessions.md
website/docs/infrastructure/: cloudflare.md  overview.md  relay.md  server-node.md  signaling.md
website/docs/internals/: cryptography.md  wire-protocol.md
website/src/components/: LanguageTabs.tsx
website/src/pages/: index.module.css  index.tsx
