[workspace]
members = ["packages/rs/cairn-p2p", "services/signaling", "services/relay", "services/bootstrap", "conformance/runners/rust-runner"]
exclude = ["demo/messaging/rust", "demo/folder-sync/rust", "demo/server-node", "tools/gen-vectors", "tools/gen-vectors-extra"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/moukrea/cairn"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
ciborium = "0.2"
clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"
hmac = "0.12"
md-5 = "0.10"
rand = "0.8"
rustls = "0.23"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
sha1 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-tungstenite = "0.24"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v7", "serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
libp2p = { version = "0.54", features = ["tokio", "quic", "tcp", "websocket", "tls", "yamux", "noise", "dns", "macros", "ed25519", "rsa", "mdns", "kad", "request-response", "identify", "relay", "dcutr", "autonat", "upnp"] }
libp2p-identity = { version = "0.2", features = ["ed25519", "rsa"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
subtle = "2"
curve25519-dalek = { version = "4", features = ["digest"] }
spake2 = "0.4"
zeroize = { version = "1", features = ["derive"] }
bs58 = "0.5"
argon2 = "0.5"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
qrcode = "0.14"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
futures-channel = "0.3"
