[package]
name = "cairn-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "cairn-server"
path = "src/main.rs"

[dependencies]
cairn-p2p = { path = "../../packages/rs/cairn-p2p" }
axum = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
subtle = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
