[package]
name = "cairn-bootstrap"
version = "0.1.0"
description = "Lightweight Kademlia DHT bootstrap node for cairn P2P"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cairn-p2p = { path = "../../packages/rs/cairn-p2p" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
