[package]
name = "cairn-relay"
version = "0.2.0"
description = "TURN relay server for cairn P2P connectivity"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
clap.workspace = true
hmac.workspace = true
md-5.workspace = true
rand.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tracing.workspace = true
subtle.workspace = true
tower = { workspace = true }
tracing-subscriber.workspace = true
