[package]
name = "cairn-signal"
version = "0.1.0"
description = "WebSocket signaling server for cairn P2P connectivity"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ciborium.workspace = true
clap.workspace = true
futures-util.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde.workspace = true
serde_bytes.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
