[package]
name = "cairn-conformance-runner"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cairn-conformance-runner"
path = "src/main.rs"

[dependencies]
cairn-p2p = { path = "../../../packages/rs/cairn-p2p" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
hex = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }
hmac = { workspace = true }
