[package]
name = "cairn-folder-sync"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "cairn-folder-sync"
path = "src/main.rs"

[dependencies]
cairn-p2p = { path = "../../../packages/rs/cairn-p2p" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
